--- a/views/base/sidbar_menu.html
+++ b/views/base/sidbar_menu.html
@@ -2,7 +2,7 @@
     <li class="header text-center">MAIN NAVIGATION</li>
 {{/*    {% if g.usercontroller.role in [UserRole.admin, UserRole.sa,UserRole.dba] %}*/}}
     <!-- 用户管理 -->
-    <li class="treeview" id="account">
+    <li class="treeview" id="user">
         <a href="#"><i class="fa fa-users"></i> <span>用户管理</span> <i class="fa fa-angle-left pull-right"></i></a>
         <ul class="treeview-menu">
             <li class="list">
