--- a/views/base/sidbar_menu.html
+++ b/views/base/sidbar_menu.html
@@ -17,7 +17,7 @@
         <a href="#"><i class="fa fa-users"></i> <span>k8s集群配置信息</span> <i class="fa fa-angle-left pull-right"></i></a>
         <ul class="treeview-menu">
             <li class="list">
-                <a href=""> <i class="fa fa-circle-o"></i> 集群信息列表</a>
+                <a href="{{urlfor "ClusterController.List"}}"> <i class="fa fa-circle-o"></i> 集群信息列表</a>
             </li>
             <li class="env_list">
                 <a href=""> <i class="fa fa-circle-o"></i> 环境与集群关系设置</a>
