--- a/views/base/sidbar_menu.html
+++ b/views/base/sidbar_menu.html
@@ -1,6 +1,5 @@
 <ul class="sidebar-menu">
     <li class="header text-center">MAIN NAVIGATION</li>
-{{/*    {% if g.usercontroller.role in [UserRole.admin, UserRole.sa,UserRole.dba] %}*/}}
     <!-- 用户管理 -->
     <li class="treeview" id="user">
         <a href="#"><i class="fa fa-users"></i> <span>用户管理</span> <i class="fa fa-angle-left pull-right"></i></a>
@@ -13,7 +12,7 @@
             </li>
         </ul>
     </li>
-    <li class="treeview" id="k8s_info">
+    <li class="treeview" id="cluster">
         <a href="#"><i class="fa fa-users"></i> <span>k8s集群配置信息</span> <i class="fa fa-angle-left pull-right"></i></a>
         <ul class="treeview-menu">
             <li class="list">
