环境维护项

--- a/views/base/sidbar_menu.html
+++ b/views/base/sidbar_menu.html
@@ -19,7 +19,7 @@
                 <a href="{{urlfor "ClusterController.List"}}"> <i class="fa fa-circle-o"></i> 集群信息列表</a>
             </li>
             <li class="env_list">
-                <a href="#"> <i class="fa fa-circle-o"></i> 环境与集群关系设置</a>
+                <a href="{{urlfor "EnvClusterBindingController.List"}}"> <i class="fa fa-circle-o"></i> 环境与集群关系设置</a>
             </li>
         </ul>
     </li>
