--- a/views/usercontroller/list.html
+++ b/views/usercontroller/list.html
@@ -2,7 +2,7 @@
 {{define "content"}}
 <div class="box">
     <div class="box-header">
-        <h4 class="box-title">环境列表</h4>
+        <h4 class="box-title">用户列表</h4>
         <div class="box-tools">
             <form class="form-inline" id="search-form">
                 <div class="input-group" style="width: 300px;">
@@ -13,8 +13,7 @@
                                                                                 style="margin-left:0px"></i>
                         </button>
                     </div>
-                    <a href="{{ urlfor "EnvClusterBindingController.Add" }}" class="btn btn-primary btn-sm
-                    pull-right">创建环境</a>
+                    <a href={{ urlfor "UserController.Add" }} class="btn btn-primary btn-sm pull-right">新建用户</a>
                 </div>
             </form>
         </div>
@@ -27,24 +26,28 @@
                     <thead>
                     <tr role="row">
                         <th class="text-center">ID</th>
-                        <th class="text-center">环境名</th>
-                        <th class="text-center">命名空间</th>
-                        <th class="text-center">绑定集群</th>
+                        <th class="text-center">用户名</th>
+                        <th class="text-center">角色</th>
+                        <th class="text-center">邮箱</th>
+                        <th class="text-center">激活</th>
                         <th class="text-center">操作</th>
                     </tr>
                     </thead>
                     <tbody>
-                    {{ range .Envs }}
+                    {{ range .Users }}
                     <tr role="row" class="odd">
-                        <td class="text-center">{{ .Env.Id }}</td>
-                        <td class="text-center">{{ .Env.EnvName }}</td>
-                        <td class="text-center">{{ .Env.Namespace }}</td>
-                        <td class="text-center">{{ range .Clusters }}{{.ClusterName}}{{end}}</td>
+                        <td class="text-center">{{ .Id }}</td>
+                        <td class="text-center">{{ .UserName }}</td>
+                        <td class="text-center">
+                            {{ .Role.Rolename }}
+                        </td>
+                        <td class="text-center">{{ .Email }}</td>
+                        <td class="text-center">{{ if .Active }}是{{else}}否{{end}}</td>
                         <td class="text-center" style="width:150px">
                             <a class="fa fa-pencil-square-o audit-tip" title="编辑" onclick=""
-                               href="{{ urlfor "EnvClusterBindingController.Update" ":id" .Env.Id }}"></a>
+                               href={{ urlfor "UserController.Update" ":id" .Id }}></a>
                             <a class="text-red fa fa-trash-o delete-tip" title="删除"
-                               onclick="env_delete({{ .Env.Id }})" href="#"></a>
+                               onclick="user_delete({{ .Id }})" href="#"></a>
                         </td>
                     </tr>
                     {{end}}
@@ -70,11 +73,11 @@
 {{end}}
 {{define "self_footer_script"}}
 <script>
-    function env_delete(env_id) {
-        ui.confirm('确定删除集群?', function () {
+    function user_delete(user_id) {
+        ui.confirm('确定删除用户?', function () {
             Net.post({
-                url: "{{ urlfor "EnvClusterBindingController.Delete" }}",
-                data: JSON.stringify({"id": parseInt(env_id)}),
+                url: {{ urlfor "UserController.Delete" }},
+                data: JSON.stringify({"id": parseInt(user_id)}),
                 reload: true
             });
         });
